platform/service-mesh/istio/security/authorization/account-service/deny-all.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: account-service
spec: {}
